--- a/src/com/leetcode/dp/0_1背包.md
+++ b/src/com/leetcode/dp/0_1背包.md
@@ -26,3 +26,21 @@ public int knapsack(int W, int N, int[] weights, int[] values) {
     return dp[N][W];
 }
 ```
+还能对上面的代码进行空间优化，通过观察状态转移方程知道，前i件物品的状态仅与前i-1件物品的状态有关，因此可以将dp定义为一维数组
+此时，dp[j]既可以表示dp[i-1][j]也可以表示dp[i][j]，此时：
+dp[j] = max(dp[j], dp[j-w]+v)
+```java
+public int knapsack(int W, int N, int[] weights, int[] values) {
+    int[] dp = new int[W + 1];
+    for (int i = 1; i <= N; i++) {
+        int w = weights[i - 1], v = values[i - 1];
+        for (int j = W; j >= 1; j--) {
+            if (j >= w) {
+                dp[j] = Math.max(dp[j], dp[j - w] + v);
+            }
+        }
+    }
+    return dp[W];
+}
+```
+
